Change to implied extensions for a-tags

--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,7 @@ body {
     -moz-filter: grayscale(100%);
     -ms-filter: grayscale(100%);
     filter: grayscale(100%);
+    image-rendering: pixelated;
 }
 
 #header {
