--- a/css/style.css
+++ b/css/style.css
@@ -1,65 +1,11 @@
-@font-face {
-	font-family: 'Iosevka Aile Web';
-	font-display: swap;
-	font-weight: 400;
-	font-stretch: normal;
-	font-style: normal;
-	src:  url('woff2/iosevka-aile-regular.woff2') format('woff2');
-}
-
-@font-face {
-	font-family: 'Iosevka Aile Web';
-	font-display: swap;
-	font-weight: 400;
-	font-stretch: normal;
-	font-style: oblique;
-	src:  url('woff2/iosevka-aile-oblique.woff2') format('woff2');
-}
-
-@font-face {
-	font-family: 'Iosevka Aile Web';
-	font-display: swap;
-	font-weight: 400;
-	font-stretch: normal;
-	font-style: italic;
-	src:  url('woff2/iosevka-aile-italic.woff2') format('woff2');
-}
-
-
-@font-face {
-	font-family: 'Iosevka Aile Web';
-	font-display: swap;
-	font-weight: 700;
-	font-stretch: normal;
-	font-style: normal;
-	src:  url('woff2/iosevka-aile-bold.woff2') format('woff2');
-}
-
-@font-face {
-	font-family: 'Iosevka Aile Web';
-	font-display: swap;
-	font-weight: 700;
-	font-stretch: normal;
-	font-style: oblique;
-	src: url('woff2/iosevka-aile-boldoblique.woff2') format('woff2');
-}
-
-@font-face {
-	font-family: 'Iosevka Aile Web';
-	font-display: swap;
-	font-weight: 700;
-	font-stretch: normal;
-	font-style: italic;
-	src: url('woff2/iosevka-aile-bolditalic.woff2') format('woff2');
-}
-
 body {
     background: #EEE;
     color: #333;
+    font-size: 1.1rem;
     max-width: 80vw;
     width: 80vw;
     margin: 2vh auto;
-    font-family: 'Iosevka Aile Web';
+    font-family: 'Athenia';
     -webkit-filter: grayscale(100%);
     -moz-filter: grayscale(100%);
     -ms-filter: grayscale(100%);
