--- a/style.css
+++ b/style.css
@@ -91,6 +91,11 @@ section h1 {
   margin: 0 0 1em 0;
 }
 
+h2, h3, h4 {
+  font-size: 1em;
+  font-weight: 600;
+  margin: 1.6em 0 .6em 0;
+}
 p, ul, ol, article {
   max-width: 60ch;
   margin-bottom: .6em;
