--- a/style.css
+++ b/style.css
@@ -1,3 +1,31 @@
+@font-face {
+  font-family: "Iosevka Etoile";
+  src: local("Iosevka Etoile"),
+    url("./fonts/iosevka-etoile-regular.woff2") format("woff2")
+}
+
+@font-face {
+  font-family: "Iosevka Etoile";
+  src: local("Iosevka Etoile Bold"),
+  url("./fonts/iosevka-etoile-bold.woff2") format("woff2");
+  font-weight: bold;
+}
+
+@font-face {
+  font-family: "Iosevka Etoile";
+  src: local("Iosevka Etoile Italic"),
+  url("./fonts/iosevka-etoile-italic.woff2") format("woff2");
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Iosevka Etoile";
+  src: local("Iosevka Etoile Italic Bold"),
+  url("./fonts/iosevka-etoile-bolditalic.woff2") format("woff2");
+  font-style: italic;
+  font-weight: bold;
+}
+
 * { margin: 0; padding: 0; box-sizing: border-box;
   --textcolor: #333;
   --bgcolor: #EEE;
@@ -7,6 +35,7 @@
   -ms-filter: grayscale(100%);
   filter:  grayscale(100%);
   image-rendering: pixelated;
+  font-family: "Iosevka Etoile";
 }
 
 @media (prefers-color-scheme: dark) {
@@ -21,23 +50,19 @@
   body { font-size: 16px; }
 }
 
-@media only screen and (max-width: 540px) {
-  nav { width: 100%; } /* Fix for older webkit versions */
-}
-
 body {
-    font-family: monospace;
     background: var(--bgcolor);
     color: var(--textcolor);
     position: relative;
-    font-size: 16px;
+    line-height: 1.4;   
+    font-size: 18px;
     max-width: 64em;
     margin: 0 auto;
 }
 
 /* ----- sections ----- */
 section {
-  padding: calc(3em + 5vw) 5vw 8vw 5vw;
+  padding: calc(3em + 2vw) 5vw 8vw 5vw;
   display: none;
   position: absolute;
   top: 0;
@@ -56,9 +81,8 @@ section#home {
 
 /* ----- header ----- */
 header {
-  padding: 5vw 5vw 0 5vw;
+  padding: 2vw 5vw 0 5vw;
   display: flex;
-  flex-wrap: wrap;
   position: absolute;
   width: 100%;
   max-width: 64em;
