--- a/style.css
+++ b/style.css
@@ -1,8 +1,14 @@
+@font-face {
+  font-family: "Iosevka Aile Light";
+  src: local("Iosevka Aile Light"),
+  url("iosevka_aile_light.woff2") format("woff2");
+}
+
 * { margin: 0; padding: 0; box-sizing: border-box;
   --textcolor: #353535;
   --bgcolor: #EEEEEE;
   --highlight: #286486;
-  font-family: monospace;
+  font-family: "Iosevka Aile Light";
 }
 
 @media (prefers-color-scheme: dark) {
@@ -29,7 +35,7 @@ body {
 
 /* ----- sections ----- */
 section {
-  padding: calc(3em + 2vw) 5vw 8vw 5vw;
+  padding: calc(4em + 2vw) 5vw 8vw 5vw;
   display: none;
   position: absolute;
   top: 0;
@@ -99,7 +105,6 @@ h2, h3, h4 {
   margin: 1.6em 0 .6em 0;
 }
 p, ul, ol, article {
-  max-width: 70ch;
   margin-bottom: .6em;
 }
 
@@ -110,7 +115,7 @@ ul {
 img {
   display: inline;
   max-width: 100%;
-  height: 2rem;
+  height: 1.75rem;
 }
 
 label {
