--- a/style.css
+++ b/style.css
@@ -1,21 +1,24 @@
 @font-face {
-  font-family: "Iosevka Aile Light";
-  src: local("Iosevka Aile Light"),
-  url("iosevka_aile_light.woff2") format("woff2");
+  font-family: "Iosevka Etoile Light";
+  src: local("Iosevka Etoile Light"),
+  url("iosevka_etoile_light.woff2") format("woff2");
 }
 
 * { margin: 0; padding: 0; box-sizing: border-box;
-  --textcolor: #353535;
-  --bgcolor: #EEEEEE;
-  --highlight: #286486;
-  font-family: "Iosevka Aile Light";
+  --textcolor: #555555;
+  --bgcolor: #E2E2E2;
+  --highlight: #0084A3;
+  font-family: "Iosevka Etoile Light";
 }
 
 @media (prefers-color-scheme: dark) {
   * {
-    --textcolor: #BBBBBB;
-    --bgcolor: #191919;
-    --highlight: #6099C0;
+    --textcolor: #DDDDDD;
+    --bgcolor: #4B4B4B;
+    --highlight: #97BDDE;
+  }
+  header h1 a img {
+    filter: invert();
   }
 }
 
@@ -35,7 +38,9 @@ body {
 
 /* ----- sections ----- */
 section {
-  padding: calc(4em + 2vw) 5vw 8vw 5vw;
+  padding: calc(3em + 4rem) 2rem 8rem 2rem;
+  outline: 1px solid;
+  outline-offset: -1rem;
   display: none;
   position: absolute;
   top: 0;
@@ -54,11 +59,14 @@ section#home {
 
 /* ----- header ----- */
 header {
-  padding: 2vw 5vw 0 5vw;
+  outline: 1px solid;
+  outline-offset: -1rem;
+  padding: 2rem 2rem 2rem 2rem;
   display: flex;
   position: absolute;
   width: 100%;
   z-index: 2;
+  align-items: center;
 }
 
 header h1 {
@@ -66,11 +74,11 @@ header h1 {
   font-weight: normal;
   flex: 1;
   white-space:  nowrap;
-  padding: 0 5vw .5em 0;
+  height: 2rem;
 }
 
 nav a:not(:last-of-type) {
-  margin-right: 1vw;
+  margin-right: 0.5rem;
 }
 
 /* ----- general ----- */
@@ -83,12 +91,6 @@ a:hover {
   border-bottom: 1px solid;
 }
 
-p a:before {
-  content: "{";
-}
-p a:after {
-  content: "}";
-}
 
 section h1 {
   font-size: 1em;
@@ -112,10 +114,25 @@ ul {
   list-style-type: none;
 }
 
+#logo {
+  height: 2rem;
+  max-width: 100%;
+  display: inline;
+}
+
+h1 a:hover {
+  border:none;
+}
+
+#logo:hover {
+  outline: 1px solid;
+  outline-offset: 4px;
+}
+
 img {
   display: inline;
   max-width: 100%;
-  height: 1.75rem;
+  height: 2rem;
 }
 
 label {
