--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 
 /* ----- sections ----- */
 section {
-  padding: calc(3em + 4rem) 2rem 8rem 2rem;
+  padding: 6rem 2rem 8rem 2rem;
   outline: 1px solid;
   outline-offset: -1rem;
   display: none;
