--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
 
 /* ----- sections ----- */
 section {
-  padding: 6rem 2rem 8rem 2rem;
+  padding: 6rem 2rem 1rem 2rem;
   outline: 1px solid;
   outline-offset: -1rem;
   display: none;
@@ -101,10 +101,14 @@ header * a {
   color: var(--textcolor);
 }
 
+#home ul {
+  list-style: inside '- ';
+}
+
 h2, h3, h4 {
   font-size: 1em;
   font-weight: 600;
-  margin: 1.6em 0 .6em 0;
+  margin-bottom: .6em;
 }
 p, ul, ol, article {
   margin-bottom: .6em;
