--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ body {
     color: var(--textcolor);
     position: relative;
     line-height: 1.4;   
-    font-size: 1.25rem;
+    font-size: 24px;
     max-width: 60vw; 
     margin: 0 auto;
 }
@@ -81,7 +81,6 @@ header {
   padding: 2rem 2rem 2rem 2rem;
   display: flex;
   position: absolute;
-  width: 100%;
   z-index: 2;
   align-items: center;
 }
@@ -139,7 +138,7 @@ ul {
 
 #logo {
   height: 1.5rem;
-  object-fit: cover;
+  object-fit: none;
   padding: 0 1rem 0 0;
   width: 100%;
   image-rendering: pixelated;
@@ -154,7 +153,6 @@ h1 a:hover {
 img {
   display: inline;
   max-width: 100%;
-  height: 2rem;
 }
 
 label {
@@ -219,33 +217,27 @@ article time {
 }
 
 .grid {
-  display: grid;
-  grid-gap: 1rem;
-  grid-template-columns: repeat(auto-fill, minmax(400px, 1fr)); /* 150px = minimum image size */
-  grid-auto-flow: dense;
-  padding: 0 0;
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.grid a {
-  position: relative;
-  border: 0;
+.grid h4 {
+    display:inline-block;
+    align-self: center;
+    font-size: 2rem;
+    justify-self: center;
+    text-align: center;
+    margin-bottom: 0;
 }
+
 
 .grid a:hover {
   filter: opacity(0.4);
 }
 
 /* For a square ratio */
-.grid a:before {
-  content: "";
-  display: block;
-  padding-top: 100%;
-}
 
-.grid a img {
-  position: absolute;
+.grid img {
   top: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: contain;
+  object-fit: cover;
 }
