--- a/style.css
+++ b/style.css
@@ -151,8 +151,9 @@ h1 a:hover {
 
 
 img {
+  object-fit: none;
   display: inline;
-  max-width: 100%;
+  width: 20vw;
 }
 
 label {
@@ -221,15 +222,6 @@ article time {
   flex-wrap: wrap;
 }
 
-.grid h4 {
-    display:inline-block;
-    align-self: center;
-    font-size: 2rem;
-    justify-self: center;
-    text-align: center;
-    margin-bottom: 0;
-}
-
 
 .grid a:hover {
   filter: opacity(0.4);
@@ -239,5 +231,7 @@ article time {
 
 .grid img {
   top: 0;
-  object-fit: cover;
+  object-fit: none;
+  width:20vw;
+  max-width:400px;
 }
