--- a/style.css
+++ b/style.css
@@ -221,13 +221,18 @@ article time {
 
 .grid a:hover {
   filter: opacity(0.4);
+  border-bottom: none;
 }
 
 /* For a square ratio */
+.grid a {
+    width:50%;
+}
 
 .grid img {
   top: 0;
   object-fit: none;
-  width:20vw;
+  width:100%;
+  height:100%;
   max-width:400px;
 }
