--- a/style.css
+++ b/style.css
@@ -15,18 +15,18 @@
 }
 
 * { margin: 0; padding: 0; box-sizing: border-box;
-  --textcolor: #000;
-  --bgcolor: #FFF;
-  --highlight: #896788;
+  --textcolor: #2C363C;
+  --bgcolor: #F0EDEC;
+  --highlight: #1D5573;
   font-family: "Cozette";
   -webkit-font-smoothing: antialiased;
 }
 
 @media (prefers-color-scheme: dark) {
   * {
-    --textcolor: #FFF;
-    --bgcolor: #000;
-    --highlight: #A5A6C5;
+    --textcolor: #b4bdc3;
+    --bgcolor: #1C1917;
+    --highlight: #61abda;
   }
   header h1 a img {
     filter: invert();
